# robocup_demo

./: .gitattributes  .gitignore  .gitmodules  README.md
script/: start_game_controller.sh
scripts/: build.sh  sim_start.sh  start_vision.sh
scripts/vision/: build_engine.sh
src/brain/: CMakeLists.txt
src/brain/behavior_trees/: game.xml
src/brain/behavior_trees/subtrees/: subtree_goal_keeper_play.xml
src/brain/config/: brain.yaml
src/brain/configs/: config.yaml
src/brain/include/: brain.h  brain_config.h  brain_data.h  brain_tree.h  field_data.h  team_communication_msg.h  types.h
src/brain/launch/: launch.py
src/brain/src/: brain.cpp  brain_communication.cpp  brain_config.cpp  brain_tree.cpp  field_data.cpp
src/game_controller/: CMakeLists.txt  package.xml
src/game_controller/include/: game_controller_node.h
src/game_controller/launch/: launch.py
src/game_controller/msg/: GameControl.msg
src/game_controller/src/: game_controller_node.cpp  main.cpp
src/interface/booster_interface/: CMakeLists.txt
src/interface/booster_msgs/: CMakeLists.txt
src/interface/game_controller_interface/: CMakeLists.txt
src/interface/vision_interface/: CMakeLists.txt
src/vision/: CMakeLists.txt
src/vision/config/: vision.yaml
src/vision/include/booster_vision/model/trt/: impl.h
src/vision/launch/: launch.py
src/vision/model/: best_ada.engine  best_seg_orin.engine  best_turing.engine
src/vision/src/calibration/: calibration_node.cpp
src/vision/src/model/trt/: CMakeLists.txt  impl.cpp
utils/service/: robocup_game_assist.service
